# convertor

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  README.txt  TODO.txt  convert-file.py  pyproject.toml  setup.py  webob-app.py  werkzeug-app.py
.github/workflows/: ci.yml  docker.yml
config/: convertor.ini  convertor.service  convertor.socket  nginx.conf
convertor/: __init__.py  __main__.py  main.py  odffile.py  util.py  web_app.py
src/convertor/: __main__.py  caselessdict.py  cli.py  convert_odf.py  core.py  main.py  util.py  yuscii.py
src/convertor/web/: __init__.py
src/convertor/web/static/: index.html  script.js  styles.css  sw.js
tests/: test_conversions.py  test_file_conversion.py  test_util.py  test_yuscii.py
tests/fixtures/: danocna-postapka.odt  parnicna-postapka.odt  simple-example.odt
